--- a/aula0626/package.json
+++ b/aula0626/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7"
+    "express-handlebars": "^7.0.7",
+    "mysql2": "^3.4.3",
+    "sequelize": "^6.32.1"
   }
 }
